--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -141,7 +141,8 @@
 <p>Using Docker is currently the recommended way to get started with Zokrates.</p>
 <pre><code class="language-bash">docker run -ti zokrates/zokrates /bin/bash
 </code></pre>
-<p>Or build yourself with the following commands.</p>
+<p>Now you should be dropped into a shell and can find the <code>zokrates</code> executable in the following folder <code>ZoKrates/target/release</code>.</p>
+<p>Alternatively you can build the container yourself with the following commands:</p>
 <pre><code class="language-bash">git clone https://github.com/JacobEberhardt/ZoKrates
 cd ZoKrates
 docker build -t zokrates .
