--- a/concepts.html
+++ b/concepts.html
@@ -137,7 +137,7 @@
                 <div id="content" class="content">
                     <main>
                         <a class="header" href="#zokrates-programming-concepts" id="zokrates-programming-concepts"><h1>ZoKrates Programming Concepts</h1></a>
-<a class="header" href="#variable" id="variable"><h2>Variable</h2></a>
+<a class="header" href="#variables" id="variables"><h2>Variables</h2></a>
 <a class="header" href="#types" id="types"><h2>Types</h2></a>
 <a class="header" href="#comments" id="comments"><h2>Comments</h2></a>
 <a class="header" href="#functions" id="functions"><h2>Functions</h2></a>
