--- a/print.html
+++ b/print.html
@@ -561,7 +561,7 @@ In addition we assert the result bit by bit with the hard-coded correct solution
 Remember that in this example only two parties have been involved. This special case makes it easy to deal with zkSNARK's trust assumptions: Only Vitor was interested in verifying the claim by Alice, hence he can trust his execution of the setup phase.
 However, in more general use-cases there might be multiple parties interested in verifying he correctness of Alice's statement. For example, in the zero-knowledge based cryptocurrency zCash every node needs to be able to validate the correctness of transactions. In order to generalize the setup phase to these multi-party use-cases a tricky process, commonly referred to as “trusted setup” or &quot;ceremony&quot; needs to be conducted. Currently, ZoKrates doesn't provide support for these types of setups.</p>
 <a class="header" href="#zokrates-programming-concepts" id="zokrates-programming-concepts"><h1>ZoKrates Programming Concepts</h1></a>
-<a class="header" href="#variable" id="variable"><h2>Variable</h2></a>
+<a class="header" href="#variables" id="variables"><h2>Variables</h2></a>
 <a class="header" href="#types" id="types"><h2>Types</h2></a>
 <a class="header" href="#comments" id="comments"><h2>Comments</h2></a>
 <a class="header" href="#functions" id="functions"><h2>Functions</h2></a>
