--- a/sha256example.html
+++ b/sha256example.html
@@ -143,7 +143,7 @@ In particular, we show how ZoKrates and the Ethereum blockchain can be used to a
 <a class="header" href="#pre-requisites" id="pre-requisites"><h2>Pre-requisites</h2></a>
 <p>Make sure you have followed the instructions in the <a href="gettingstarted.html">Getting Started</a> chapter and are able to run the &quot;Hello World&quot; example described there.</p>
 <a class="header" href="#computing-a-hash-using-zokrates" id="computing-a-hash-using-zokrates"><h2>Computing a Hash using ZoKrates</h2></a>
-<p>We will start this tutorial by using ZoKrates to compute the hash-digest of the arbitrarily chosen number <code>5</code>.</p>
+<p>We will start this tutorial by using ZoKrates to compute the hash-digest for an arbitrarily chosen pre-image, being the number <code>5</code> in this example.</p>
 <p>First, we create a new file named <code>hashexample.code</code> with the following content:</p>
 <pre><code class="language-zokrates">import &quot;LIBSNARK/sha256packed&quot;
 
